Added Additional Links pages to all appropriate pages.

--- a/templates/scenarios.haml
+++ b/templates/scenarios.haml
@@ -7,6 +7,5 @@
 		%h3 Scenarios
 		- @scenarios.each do |k, v|
 			%a{:href=>"/scenario/#{k}"} #{k}
-		%p
-		%p 
+		%h3 Additional Links
 		%a{:href=>"/reset"} Reset SocialQ
