--- a/templates/unkown.haml
+++ b/templates/unkown.haml
@@ -5,4 +5,11 @@
 	%body
 		%h1 SocialQ Scenario Publisher
 		Unknown Scenario #{@scenario}, possible scenarios are: #{@possible_scenarios}
+		%br
+		%br
+		%h3 Additional Links
+		%a{:href=>"/scenarios"} Back to Scenarios
+		%br
+		%a{:href=>"/reset"} Reset SocialQ
+		
 			
