--- a/templates/reset.haml
+++ b/templates/reset.haml
@@ -4,4 +4,8 @@
 		%img(src="/images/orange-logo-400.jpg" align="left" alt="Orange" width="100" height="100")
 	%body
 		%h1 SocialQ Reset!
+		%br
+		%br
+		%h3 Additional Links
+		%a{:href=>"/scenarios"} Back to Scenarios
 			
