Fixed a nesting problem in the template

--- a/templates/scenario_loaded.haml
+++ b/templates/scenario_loaded.haml
@@ -6,7 +6,7 @@
 		%h1 SocialQ Scenario Publisher
 		%h3 Scenario #{@scenario} Loaded!
 		%br
-		%h3 Messages:
-			#{@results.inspect}
+		%h3 Messages: #{@results.inspect}
+		%br
 		%h3 Additional Links
 		%a{:href=>"/reset"} Reset SocialQ
