--- a/templates/scenario_deleted.haml
+++ b/templates/scenario_deleted.haml
@@ -4,10 +4,7 @@
 		%img(src="/images/orange-logo-400.jpg" align="left" alt="Orange" width="100" height="100")
 	%body
 		%h1 SocialQ Scenario Publisher
-		%h3 Scenario #{@scenario} Loaded!
-		%br
-		%h3 Messages: #{@results.inspect}
-		%br
+		%h3 Scenario #{@scenario} Deleted!
 		%h3 Additional Links
 		%a{:href=>"/scenarios"} Back to Scenarios
 		%br
